--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AstroWeather">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".FavoritePlaces"></activity>
+        <activity android:name=".LocationDetail"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".FavoritePlaces" />
         <activity android:name=".AstroWeather">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,4 +23,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
